Magick++ release numbering tracks ImageMagick release numbering so the
Magick++ release number increments even if there are no changes associated
with Magick++ itself.

(5.4.0)
  * Fixed bug when scaling from Quantum to double in derived Color classes.

  * Pass all input parameter strings as 'const std::string &' in Color class.

(5.3.9)
  * New class, CoderInfo, to return information for a specified image
    format as well as the coderInfoList() template function to return
    the list of coders which match a specification.

  * User now may tell Blob updateNoCopy() what memory system (C or C++)
    the memory was allocated from.  Used to assume the C++ allocator.
    This resolves a bug on some platforms (e.g. Windows).

  * Added Image 'opacity' method (and STL opacityImage()) to set, or
    attenuate, image opacity.

  * Added Image 'type' method (and STL typeImage()) to set image
    representation type.

  * Image depth method now adjusts pixels to match specified image depth,
    and reports depth based on current image pixels.

(5.3.8)
  * New class 'TypeMetric' to contain font type metrics.

  * New Image method 'fontTypeMetrics()' to obtain font type metrics.

  * Image colorMap method automatically extends the colormap if index
    is past the end of the current colormap.

  * Added clipMask method to add a clip mask to the current
    image. Prevents modification to image pixels wherever the
    associated clip mask image is tranparent.

  * Documented methods which were added previously, but left
    undocumented.

(5.3.7)
  * No changes.

(5.3.6)
  * Adjusted parameters to 'edge' and 'medianFilter' to match
    equivalent libMagick functions.
  * Fixed a Montage bug which was not allowing color options to be unset.
  * Montage defaults are no longer taken from first Image in list.
  * Magick++ demo output looks like PerlMagick demo output again.

(5.3.5)
  * Default radius and sigma parameters were changed on the blur,